--- a/making-vue-alive.html
+++ b/making-vue-alive.html
@@ -26,6 +26,8 @@
 
 <body>
   <div id="app">
+    <label for="age">Enter your age:</label>
+    <input v-model="age" />
     <div>
       {{message}}
     </div>
@@ -51,7 +53,11 @@
           message.value = 'Learn Nuxt after vue'
         }, 5000)
 
-        return { message, canDrive }
+        return {
+          message,
+          canDrive,
+          age
+        }
       },
     };
 
