--- a/project2/image-gallery.html
+++ b/project2/image-gallery.html
@@ -69,10 +69,10 @@
 
     <div class="gallery" v-else>
       <!-- List Rendering and Conditional Class Binding -->
-      <div class="photo" v-for="photo in photos">
-        {{photo.id}}
+      <div class="photo" v-for="photo in photos" :key="photo.id">
         <!-- An image goes here -->
-        <button class="favorite-button">
+        <img :src="photo.url" />
+        <button class="favorite-button" :class="{'active': photo.isFavorite}" @click="toggleFavorite(photo)">
           ★
         </button>
       </div>
@@ -103,14 +103,16 @@
 
         };
 
-        const toggleFavorite = () => {
+        const toggleFavorite = (photo) => {
           // Favorite toggling logic
+          photo.isFavorite = !photo.isFavorite
         };
 
         return {
           addPhoto,
           photos,
-          newPhotoUrl
+          newPhotoUrl,
+          toggleFavorite
         }
       },
     };
