--- a/project2/image-gallery.html
+++ b/project2/image-gallery.html
@@ -69,9 +69,9 @@
 
     <div class="gallery" v-else>
       <!-- List Rendering and Conditional Class Binding -->
-      <div class="photo" v-for="photo in photos" :key="photo.id">
+      <div class="photo" v-for="(photo, index) in photos" :key="photo.id">
         <!-- An image goes here -->
-        <img :src="photo.url" />
+        <img :src="photo.url" @click="removePhoto(index)" />
         <button class="favorite-button" :class="{'active': photo.isFavorite}" @click="toggleFavorite(photo)">
           ★
         </button>
@@ -108,11 +108,16 @@
           photo.isFavorite = !photo.isFavorite
         };
 
+        const removePhoto = (index) => {
+          photos.value.splice(index, 1)
+        }
+
         return {
           addPhoto,
           photos,
           newPhotoUrl,
-          toggleFavorite
+          toggleFavorite,
+          removePhoto
         }
       },
     };
