--- a/project3/task-manager.html
+++ b/project3/task-manager.html
@@ -58,7 +58,7 @@
     <form>
       <!-- Adding tasks form -->
       <input ref="newTaskInput" placeholder="Add new task">
-      <select>
+      <select style="margin: 0 5px;">
         <option disabled value="">Select priority</option>
         <option>High</option>
         <option>Medium</option>
@@ -68,22 +68,23 @@
     </form>
 
     <!-- Task filtering -->
-    <input placeholder="Filter tasks...">
+    <input placeholder="Filter tasks..." style="margin-top: 5px;">
 
     <!-- If there no tasks -->
-    <div>
+    <div v-if="tasks.length === 0">
       <p>No tasks found. Try changing the filter or add some tasks!</p>
     </div>
 
-    <div>
+    <div v-else>
       <h3>Your Tasks</h3>
       <!-- This is a list of tasks -->
-      <div>
+      <div v-for="task in tasks" :key="task.id"
+        :class="{'task': true, completed: task.done, [task.priority.toLowerCase()]: true}">
         <div>
           <!-- Is task done? -->
-          <input type="checkbox">
+          <input type="checkbox" v-model="task.done">
           <!-- Task description -->
-          <span></span>
+          <span>{{task.description}}</span>
         </div>
         <!-- Removing a task -->
         <button class="remove-button">✖</button>
@@ -97,6 +98,14 @@
     const App = {
       setup() {
         const newTaskInput = ref(null)
+        const tasks = ref([
+          {
+            id: 1,
+            description: "Read a book",
+            priority: "Low",
+            done: true
+          }
+        ])
 
         onBeforeMount(() => {
           console.log('On before mount')
@@ -104,13 +113,13 @@
 
         onMounted(() => {
           newTaskInput.value.focus()
-
           console.log('On mounted')
           console.log(' newTaskInput.valu', newTaskInput.value)
         });
 
         return {
-          newTaskInput
+          newTaskInput,
+          tasks
         }
       },
     };
