--- a/project3/task-manager.html
+++ b/project3/task-manager.html
@@ -78,7 +78,7 @@
     <div v-else>
       <h3>Your Tasks</h3>
       <!-- This is a list of tasks -->
-      <div v-for="task in tasks" :key="task.id"
+      <div v-for="(task, index) in tasks" :key="task.id"
         :class="{'task': true, completed: task.done, [task.priority.toLowerCase()]: true}">
         <div>
           <!-- Is task done? -->
@@ -87,7 +87,7 @@
           <span>{{task.description}}</span>
         </div>
         <!-- Removing a task -->
-        <button class="remove-button">✖</button>
+        <button class="remove-button" @click="removeTask(index)">✖</button>
       </div>
     </div>
   </div>
@@ -122,6 +122,10 @@
           }
         };
 
+        const removeTask = (index) => {
+          tasks.value.splice(index, 1)
+        }
+
         // watch(newTask, (newValue, oldValue) => {
         //   console.log(`New value is ${newValue}, old was ${oldValue}`);
         // }, { immediate: true });
@@ -142,7 +146,8 @@
           tasks,
           addTask,
           newTask,
-          newPriority
+          newPriority,
+          removeTask
         }
       },
     };
