--- a/project3/task-manager.html
+++ b/project3/task-manager.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Task Manager | Vue Project Task Manager</title>
-  <link rel="stylesheet" href="https://unpkg.com/normalize.css/normalize.css">
+  <link rel="stylesheet" href="https://unpkg.com/normalize.css/normalize.css" />
   <style type="text/css">
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: "Arial", sans-serif;
       padding: 20px;
       font-size: 16px;
       background-color: #f4f4f9;
@@ -57,8 +57,8 @@
   <div id="app">
     <form @submit.prevent="addTask">
       <!-- Adding tasks form -->
-      <input ref="newTaskInput" placeholder="Add new task" v-model="newTask">
-      <select style="margin: 0 5px;" v-model="newPriority">
+      <input ref="newTaskInput" placeholder="Add new task" v-model="newTask" />
+      <select style="margin: 0 5px" v-model="newPriority">
         <option disabled value="">Select priority</option>
         <option>High</option>
         <option>Medium</option>
@@ -68,7 +68,7 @@
     </form>
 
     <!-- Task filtering -->
-    <input placeholder="Filter tasks..." style="margin-top: 5px;">
+    <input placeholder="Filter tasks..." style="margin-top: 5px" v-model="inputFilterTask" />
 
     <!-- If there no tasks -->
     <div v-if="tasks.length === 0">
@@ -78,11 +78,11 @@
     <div v-else>
       <h3>Your Tasks</h3>
       <!-- This is a list of tasks -->
-      <div v-for="(task, index) in tasks" :key="task.id"
+      <div v-for="(task, index) in filterTasks" :key="task.id"
         :class="{'task': true, completed: task.done, [task.priority.toLowerCase()]: true}">
         <div>
           <!-- Is task done? -->
-          <input type="checkbox" v-model="task.done">
+          <input type="checkbox" v-model="task.done" />
           <!-- Task description -->
           <span>{{task.description}}</span>
         </div>
@@ -93,53 +93,64 @@
   </div>
 
   <script>
-    const { createApp, onBeforeMount, onMounted, ref, watch, watchEffect } = Vue;
+    const {
+      createApp,
+      onBeforeMount,
+      onMounted,
+      ref,
+      watch,
+      watchEffect,
+      computed,
+    } = Vue;
 
     const App = {
       setup() {
         const tasks = ref(
-          JSON.parse(sessionStorage.getItem('tasks') ?? '[]')
+          JSON.parse(sessionStorage.getItem("tasks") ?? "[]")
         );
-        const newTaskInput = ref(null)
-        const newTask = ref('')
-        const newPriority = ref('')
+
+        const filterTasks = computed(() =>
+          tasks.value.filter((task) =>
+            task.description
+              .toLowerCase()
+              .includes(inputFilterTask.value.toLowerCase())
+          )
+        );
+
+        const newTaskInput = ref(null);
+        const newTask = ref("");
+        const newPriority = ref("");
+        const inputFilterTask = ref("");
 
         onMounted(() => {
-          newTaskInput.value.focus()
+          newTaskInput.value.focus();
         });
 
         const addTask = () => {
-          if (newTask.value !== '' && newPriority.value !== '') {
+          if (newTask.value !== "" && newPriority.value !== "") {
             tasks.value.push({
               id: tasks.value.length + 1,
               description: newTask.value,
               priority: newPriority.value,
-              done: false
-            })
+              done: false,
+            });
 
-            newTask.value = '';
-            newPriority.value = '';
+            newTask.value = "";
+            newPriority.value = "";
           }
         };
 
         const removeTask = (index) => {
-          tasks.value.splice(index, 1)
-        }
+          tasks.value.splice(index, 1);
+        };
 
-        // watch(newTask, (newValue, oldValue) => {
-        //   console.log(`New value is ${newValue}, old was ${oldValue}`);
-        // }, { immediate: true });
-
-        // watchEffect(async () => {
-        //   console.log(`Newtask input value is ${newTask.value}`)
-        // })
-
-        watch(tasks, () => {
-          // console.log('Tasks changed...')
-          sessionStorage.setItem('tasks', JSON.stringify(tasks.value))
-
-        }, { deep: true });
-
+        watch(
+          tasks,
+          () => {
+            sessionStorage.setItem("tasks", JSON.stringify(tasks.value));
+          },
+          { deep: true }
+        );
 
         return {
           newTaskInput,
@@ -147,12 +158,14 @@
           addTask,
           newTask,
           newPriority,
-          removeTask
-        }
+          removeTask,
+          filterTasks,
+          inputFilterTask,
+        };
       },
     };
 
-    createApp(App).mount('#app');
+    createApp(App).mount("#app");
   </script>
 </body>
 
